# HumanRecognition

./: README.md  pyproject.toml
humanrecog/: __init__.py  data_protocols.py  database.py  detection.py  detector.py  pipeline.py  reid.py  tracker.py  utils.py  vis.py
mmreid/: __init__.py  database.py  pipeline.py  reid.py  results.py  track.py  vis.py
scripts/: video.py
test/: embed.py  test.py  test_detector.py  test_pipeline.py
test/data/face/: test_face_reid.ipynb
